# cs2620-logical-clocks

./: .gitignore  .ruff.toml  README.md  config.toml  engineering_notebook.md  lab_notebook.md  pyproject.toml  run.py
analysis/: .experiment-output-dump.txt.swp  balanced_summary.md  baseline_summary.md  bottleneck_summary.md  experiment-output-dump.txt  extreme_imbalance_summary.md  fast_clocks_summary.md  five_machines_summary.md  high_internal_prob_summary.md  high_variance_summary.md  imbalanced_high_internal_prob_summary.md  imbalanced_low_internal_prob_summary.md  long_running_summary.md  low_internal_prob_summary.md  progressive_summary.md
analysis/plots/: README.md
src/: analyze.py  experiments.py  machine.py  orchestrator.py
src/protos/: clock.proto  clock_pb2.py  clock_pb2_grpc.py
src/tests/: test_machine.py  test_orchestrator.py
